Correción accesibilidad img

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="cards">
             <div class="card card__first">
                 <div class="card__icon">
-                    <img src="./images/icon-sedans.svg" alt="Car Sedans">
+                    <img src="./images/icon-sedans.svg" alt="" aria-hidden="true" />
                 </div>
                 <div class="card__content">
                     <h2 class="card__content--title">
@@ -38,7 +38,7 @@
             </div>
             <div class="card card__second">
                 <div class="card__icon">
-                    <img src="./images/icon-suvs.svg" alt="Car SUVs">
+                    <img src="./images/icon-suvs.svg" alt="" aria-hidden="true" />
                 </div>
                 <div class="card__content">
                     <h2 class="card__content--title">
@@ -56,7 +56,7 @@
             </div>
             <div class="card card__third">
                 <div class="card__icon">
-                    <img src="./images/icon-luxury.svg" alt="Car Luxury">
+                    <img src="./images/icon-luxury.svg" alt="" aria-hidden="true" />
                 </div>
                 <div class="card__content">
                     <h2 class="card__content--title">
